--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="rightside">
 					<h1>ONLINE HOSTEL ADDMISSON</h1>
 					<p>we are the best online hostel addmisson website</p>
-					<button><a href="indexm.php">WELCOME</a></button>
+					<button><a href="login.php">WELCOME</a></button>
 				</div>
 			</section>
 
